@@ -163,8 +163,8 @@ func testV1STSGetStats(t *testing.T) {
 		utils.MetaTCD: utils.NOT_AVAILABLE,
 		utils.MetaACC: utils.NOT_AVAILABLE,
 		utils.MetaPDD: utils.NOT_AVAILABLE,
-		utils.ConcatenatedKey(utils.MetaSum, utils.DynamicDataPrefix+utils.Usage):     utils.NOT_AVAILABLE,
-		utils.ConcatenatedKey(utils.MetaAverage, utils.DynamicDataPrefix+utils.Usage): utils.NOT_AVAILABLE,
+		utils.ConcatenatedKey(utils.MetaSum, utils.DynamicDataPrefix+utils.MetaReq+utils.NestingSep+utils.Usage):     utils.NOT_AVAILABLE,
+		utils.ConcatenatedKey(utils.MetaAverage, utils.DynamicDataPrefix+utils.MetaReq+utils.NestingSep+utils.Usage): utils.NOT_AVAILABLE,
 	}
 	if err := stsV1Rpc.Call(utils.StatSv1GetQueueStringMetrics,
 		&utils.TenantIDWithArgDispatcher{TenantID: &utils.TenantID{Tenant: "cgrates.org", ID: expectedIDs[0]}},
@@ -201,8 +201,8 @@ func testV1STSProcessEvent(t *testing.T) {
 		utils.MetaTCD: utils.NOT_AVAILABLE,
 		utils.MetaACC: utils.NOT_AVAILABLE,
 		utils.MetaPDD: utils.NOT_AVAILABLE,
-		utils.ConcatenatedKey(utils.MetaSum, utils.DynamicDataPrefix+utils.Usage):     utils.NOT_AVAILABLE,
-		utils.ConcatenatedKey(utils.MetaAverage, utils.DynamicDataPrefix+utils.Usage): utils.NOT_AVAILABLE,
+		utils.ConcatenatedKey(utils.MetaSum, utils.DynamicDataPrefix+utils.MetaReq+utils.NestingSep+utils.Usage):     utils.NOT_AVAILABLE,
+		utils.ConcatenatedKey(utils.MetaAverage, utils.DynamicDataPrefix+utils.MetaReq+utils.NestingSep+utils.Usage): utils.NOT_AVAILABLE,
 	}
 	var metrics map[string]string
 	if err := stsV1Rpc.Call(utils.StatSv1GetQueueStringMetrics,
@@ -220,8 +220,8 @@ func testV1STSProcessEvent(t *testing.T) {
 		utils.MetaTCD: -1.0,
 		utils.MetaACC: -1.0,
 		utils.MetaPDD: -1.0,
-		utils.ConcatenatedKey(utils.MetaSum, utils.DynamicDataPrefix+utils.Usage):     -1.0,
-		utils.ConcatenatedKey(utils.MetaAverage, utils.DynamicDataPrefix+utils.Usage): -1.0,
+		utils.ConcatenatedKey(utils.MetaSum, utils.DynamicDataPrefix+utils.MetaReq+utils.NestingSep+utils.Usage):     -1.0,
+		utils.ConcatenatedKey(utils.MetaAverage, utils.DynamicDataPrefix+utils.MetaReq+utils.NestingSep+utils.Usage): -1.0,
 	}
 	var floatMetrics map[string]float64
 	if err := stsV1Rpc.Call(utils.StatSv1GetQueueFloatMetrics,
@@ -266,8 +266,8 @@ func testV1STSProcessEvent(t *testing.T) {
 		utils.MetaTCD: "3m0s",
 		utils.MetaTCC: "135.1",
 		utils.MetaPDD: utils.NOT_AVAILABLE,
-		utils.ConcatenatedKey(utils.MetaSum, utils.DynamicDataPrefix+utils.Usage):     "180000000000",
-		utils.ConcatenatedKey(utils.MetaAverage, utils.DynamicDataPrefix+utils.Usage): "60000000000",
+		utils.ConcatenatedKey(utils.MetaSum, utils.DynamicDataPrefix+utils.MetaReq+utils.NestingSep+utils.Usage):     "180000000000",
+		utils.ConcatenatedKey(utils.MetaAverage, utils.DynamicDataPrefix+utils.MetaReq+utils.NestingSep+utils.Usage): "60000000000",
 	}
 	var metrics2 map[string]string
 	if err := stsV1Rpc.Call(utils.StatSv1GetQueueStringMetrics,
@@ -284,8 +284,8 @@ func testV1STSProcessEvent(t *testing.T) {
 		utils.MetaTCD: 180,
 		utils.MetaACC: 45.03333,
 		utils.MetaPDD: -1.0,
-		utils.ConcatenatedKey(utils.MetaSum, utils.DynamicDataPrefix+utils.Usage):     180000000000,
-		utils.ConcatenatedKey(utils.MetaAverage, utils.DynamicDataPrefix+utils.Usage): 60000000000,
+		utils.ConcatenatedKey(utils.MetaSum, utils.DynamicDataPrefix+utils.MetaReq+utils.NestingSep+utils.Usage):     180000000000,
+		utils.ConcatenatedKey(utils.MetaAverage, utils.DynamicDataPrefix+utils.MetaReq+utils.NestingSep+utils.Usage): 60000000000,
 	}
 	var floatMetrics2 map[string]float64
 	if err := stsV1Rpc.Call(utils.StatSv1GetQueueFloatMetrics,
@@ -320,8 +320,8 @@ func testV1STSGetStatsAfterRestart(t *testing.T) {
 		utils.MetaTCD: "3m0s",
 		utils.MetaTCC: "135.1",
 		utils.MetaPDD: utils.NOT_AVAILABLE,
-		utils.ConcatenatedKey(utils.MetaSum, utils.DynamicDataPrefix+utils.Usage):     "180000000000",
-		utils.ConcatenatedKey(utils.MetaAverage, utils.DynamicDataPrefix+utils.Usage): "60000000000",
+		utils.ConcatenatedKey(utils.MetaSum, utils.DynamicDataPrefix+utils.MetaReq+utils.NestingSep+utils.Usage):     "180000000000",
+		utils.ConcatenatedKey(utils.MetaAverage, utils.DynamicDataPrefix+utils.MetaReq+utils.NestingSep+utils.Usage): "60000000000",
 	}
 	var metrics2 map[string]string
 	if err := stsV1Rpc.Call(utils.StatSv1GetQueueStringMetrics,
@@ -491,7 +491,7 @@ func testV1STSProcessMetricsWithFilter(t *testing.T) {
 					FilterIDs: []string{"*gt:~*req.Usage:5s"},
 				},
 				&engine.MetricWithFilters{
-					MetricID:  "*sum:~CustomValue",
+					MetricID:  "*sum:~*req.CustomValue",
 					FilterIDs: []string{"*exists:~*req.CustomValue:", "*gte:~*req.CustomValue:10.0"},
 				},
 			},
@@ -523,7 +523,7 @@ func testV1STSProcessMetricsWithFilter(t *testing.T) {
 	expectedMetrics := map[string]string{
 		utils.MetaACD: utils.NOT_AVAILABLE,
 		utils.MetaTCD: utils.NOT_AVAILABLE,
-		utils.ConcatenatedKey(utils.MetaSum, "~CustomValue"): utils.NOT_AVAILABLE,
+		utils.ConcatenatedKey(utils.MetaSum, "~*req.CustomValue"): utils.NOT_AVAILABLE,
 	}
 	if err := stsV1Rpc.Call(utils.StatSv1GetQueueStringMetrics,
 		&utils.TenantIDWithArgDispatcher{TenantID: &utils.TenantID{Tenant: "cgrates.org", ID: expectedIDs[0]}}, &metrics); err != nil {
@@ -551,7 +551,7 @@ func testV1STSProcessMetricsWithFilter(t *testing.T) {
 	expectedMetrics = map[string]string{
 		utils.MetaACD: utils.NOT_AVAILABLE,
 		utils.MetaTCD: "6s",
-		utils.ConcatenatedKey(utils.MetaSum, "~CustomValue"): utils.NOT_AVAILABLE,
+		utils.ConcatenatedKey(utils.MetaSum, "~*req.CustomValue"): utils.NOT_AVAILABLE,
 	}
 	if err := stsV1Rpc.Call(utils.StatSv1GetQueueStringMetrics,
 		&utils.TenantIDWithArgDispatcher{
@@ -578,7 +578,7 @@ func testV1STSProcessMetricsWithFilter(t *testing.T) {
 	expectedMetrics = map[string]string{
 		utils.MetaACD: "12s",
 		utils.MetaTCD: "18s",
-		utils.ConcatenatedKey(utils.MetaSum, "~CustomValue"): "10",
+		utils.ConcatenatedKey(utils.MetaSum, "~*req.CustomValue"): "10",
 	}
 	if err := stsV1Rpc.Call(utils.StatSv1GetQueueStringMetrics,
 		&utils.TenantIDWithArgDispatcher{
